增加了登录&注册页面

--- a/src/pages/benlailife.html
+++ b/src/pages/benlailife.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>本来生活网 - 主页</title>
     <link rel="stylesheet" href="../styles/index.css">
 </head>
 
@@ -16,8 +16,8 @@
     <section id="top">
         <div class="margin topView clear">
             <div class="top-l-1">
-                您好,<a href="#">[登录]</a>
-                <a href="#">[注册]</a>
+                您好,<a href="login.html" target="_blank">[登录]</a>
+                <a href="register.html" target="_blank">[注册]</a>
                 <a href="#">[机构会员]</a>
             </div>
             <div class="top-l-2">
@@ -89,7 +89,7 @@
                     <a href="#">我的本来<s></s></a>
                     <div class="mylife-view">
                         <div class="lifeuser">
-                            您好，请<a href="#">[登录]</a>
+                            您好，请<a href="login.html" target="_blank">[登录]</a>
                         </div>
                         <ul class="clear">
                             <li>
@@ -1465,8 +1465,8 @@
             <div class="banner-nav">
                 <div class="banner-btn">
                     <dl>
-                        <dt><a></a></dt>
-                        <dd><a></a></dd>
+                        <!-- <dt><a></a></dt> -->
+                        <!-- <dd><a></a></dd> -->
                     </dl>
                 </div>
                 <ul>
@@ -1503,80 +1503,80 @@
                                     <li class="show-add-car">
                                         <div class="box">
                                             <p>
-                                                <a href="#"><img src="//image5.benlailife.com//ProductImages/000/000/295/470/medium/2e1e251e-2302-460a-a2be-33eb695cece0.jpg"
+                                                <a href="#"><img src="//image2.benlailife.com//ProductImages/000/000/335/199/medium/4978b8e6-a825-455c-b138-5e0a95c3e03b.jpg?imageView2/2/format/webp"
                                                         alt=""></a>
                                             </p>
                                             <p>
                                                 <a href="#">
-                                                    <em>金龙鱼软香稻大米5kg</em>
-                                                    <span>柔韧甘甜 颗颗饱满</span>
+                                                    <em>海南蜜宝红心火龙果2粒装（650g以上）</em>
+                                                    <span>每天一颗，花青素满满</span>
                                                 </a>
                                             </p>
-                                            <span>￥39.90<s>￥49.90</s></span>
+                                            <span>￥19.90<s>￥39.90</s></span>
                                             <div class="addcar-btn"><a href="#"></a></div>
                                         </div>
                                     </li>
                                     <li class="show-add-car">
                                         <div class="box">
                                             <p>
-                                                <a href="#"><img src="//image5.benlailife.com//ProductImages/000/000/295/470/medium/2e1e251e-2302-460a-a2be-33eb695cece0.jpg"
+                                                <a href="#"><img src="//image.benlailife.com//ProductImages/000/000/038/908/medium/701644fb-3041-4857-a767-29fd30168f01.jpg?imageView2/2/format/webp"
                                                         alt=""></a>
                                             </p>
                                             <p>
                                                 <a href="#">
-                                                    <em>金龙鱼软香稻大米5kg</em>
-                                                    <span>柔韧甘甜 颗颗饱满</span>
+                                                    <em>养乐多100ml*5</em>
+                                                    <span>润滑爽口，酸甜开胃</span>
                                                 </a>
                                             </p>
-                                            <span>￥39.90</span>
+                                            <span>￥12.90</span>
                                             <div class="addcar-btn"><a href="#"></a></div>
                                         </div>
                                     </li>
                                     <li class="show-add-car">
                                         <div class="box">
                                             <p>
-                                                <a href="#"><img src="//image5.benlailife.com//ProductImages/000/000/295/470/medium/2e1e251e-2302-460a-a2be-33eb695cece0.jpg"
+                                                <a href="#"><img src="//image5.benlailife.com//ProductImages/000/000/376/414/medium/55809142-ab6d-422f-b419-45da9911f4ec.jpg?imageView2/2/format/webp"
                                                         alt=""></a>
                                             </p>
                                             <p>
                                                 <a href="#">
-                                                    <em>金龙鱼软香稻大米5kg</em>
-                                                    <span>柔韧甘甜 颗颗饱满</span>
+                                                    <em>家佳康香脆炸猪排200g</em>
+                                                    <span>外香脆，内松软</span>
                                                 </a>
                                             </p>
-                                            <span>￥39.90</span>
+                                            <span>￥19.90<s>￥49.90</s></span>
                                             <div class="addcar-btn"><a href="#"></a></div>
                                         </div>
                                     </li>
                                     <li class="show-add-car">
                                         <div class="box">
                                             <p>
-                                                <a href="#"><img src="//image5.benlailife.com//ProductImages/000/000/295/470/medium/2e1e251e-2302-460a-a2be-33eb695cece0.jpg"
+                                                <a href="#"><img src="//image4.benlailife.com//ProductImages/000/000/332/095/medium/0c708b01-8822-4c95-b784-eb72f6993fc6.jpg?imageView2/2/format/webp"
                                                         alt=""></a>
                                             </p>
                                             <p>
                                                 <a href="#">
-                                                    <em>金龙鱼软香稻大米5kg</em>
-                                                    <span>柔韧甘甜 颗颗饱满</span>
+                                                    <em>渔天下真鳕颈肉（宝宝鳕鱼）180g（内含3小袋）</em>
+                                                    <span>手工去刺，富含宝宝成长需要的营养</span>
                                                 </a>
                                             </p>
-                                            <span>￥39.90</span>
+                                            <span>￥23.80 <s>￥28.80</s></span>
                                             <div class="addcar-btn"><a href="#"></a></div>
                                         </div>
                                     </li>
                                     <li class="show-add-car">
                                         <div class="box">
                                             <p>
-                                                <a href="#"><img src="//image5.benlailife.com//ProductImages/000/000/295/470/medium/2e1e251e-2302-460a-a2be-33eb695cece0.jpg"
+                                                <a href="#"><img src="//image1.benlailife.com/ProductImages/000/000/015/452/medium/0d77116b-4d61-405a-b4ad-1bda4dedf687.jpg?imageView2/2/format/webp"
                                                         alt=""></a>
                                             </p>
                                             <p>
                                                 <a href="#">
-                                                    <em>金龙鱼软香稻大米5kg</em>
-                                                    <span>柔韧甘甜 颗颗饱满</span>
+                                                    <em>澳洲牛腱子500g</em>
+                                                    <span>筋肉交错 爽口鲜香</span>
                                                 </a>
                                             </p>
-                                            <span>￥39.90</span>
+                                            <span>￥49.90 <s>￥88.90</s></span>
                                             <div class="addcar-btn"><a href="#"></a></div>
                                         </div>
                                     </li>
