增加了账号状态参数，用户管理中心

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -144,6 +144,7 @@
                 <div class="search-box">
                     <input type="text" class="txt">
                     <input type="button" class="btn">
+                    <ul></ul>
                 </div>
                 <!-- 搜索关键字 -->
                 <div class="search_word">
@@ -1481,7 +1482,7 @@
                     <s></s>
                     <p></p>
                 </div>
-                <div class="login_memory"><label for="memory"><input type="checkbox" name="memory">记住我</label>
+                <div class="login_memory"><label for="memory"><input type="checkbox" name="memory" checked>记住我</label>
                     <a href="#">忘记密码</a>
                 </div>
                 <a class="login_btn" style="cursor:pointer">立即登录</a>
