--- a/src/pages/userHome.html
+++ b/src/pages/userHome.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>本来生活网 - 用户登录</title>
+    <title>用户中心 - 本来生活网</title>
     <link rel="stylesheet" href="../styles/userHome.css">
 </head>
 
 <body>
+    <div id="to_active">
+        <div class="box">
+            <a href="active.html"><img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1545240158444&di=6d8b2a2e850134df72821468ab032fd8&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F16%2F64%2F30%2F41r58PICDsj_1024.jpg"
+                    alt=""></a>
+        </div>
+        <img src="https://image.benlailife.com/images/common/appstore_close.png" alt="" class="close_active">
+    </div>
     <section id="top">
         <div class="margin topView clear">
             <div class="top-l-1">
@@ -1538,7 +1545,8 @@
                     <div class="fl width tar">
                         昵称：</div>
                     <div class="fl p11_t">
-                        <input type="text" name="nickName" value="" maxlength="20" id="nickName" class="input_short"><span class="tips"></span></div>
+                        <input type="text" name="nickName" value="" maxlength="20" id="nickName" class="input_short"><span
+                            class="tips"></span></div>
                     <div class="fl cleb6100 ml5" id="lblnickName">
                     </div>
                 </li>
@@ -1561,7 +1569,7 @@
                     <div class="fl width tar">
                         确认密码：</div>
                     <div class="fl">
-                    <input type="password" disabled></div>
+                        <input type="password" disabled></div>
                     <div class="p11_t">
                         <a class="tips"></a></div>
                 </li>
@@ -1569,7 +1577,8 @@
                     <div class="fl width tar">
                         真实姓名：</div>
                     <div class="fl p11_t">
-                        <input type="text" name="customerName" id="customerName" maxlength="20" value="" class="input_short"><span style="color:#999;padding:0 20px;">选填</span></div>
+                        <input type="text" name="customerName" id="customerName" maxlength="20" value="" class="input_short"><span
+                            style="color:#999;padding:0 20px;">选填</span></div>
                     <div class="fl cleb6100 ml5" id="lblcustomername">
                     </div>
                 </li>
